<resources>
    <string name="app_name">Shelly</string>

    <!-- Strings related to login -->
    <string name="prompt_ip">IP address</string>
    <string name="prompt_port">Port (optional)</string>
    <string name="action_sign_in">Start</string>
    <string name="action_sign_in_short">Start</string>
    <string name="error_invalid_ip">This ip address is invalid</string>
    <string name="error_invalid_port">This port is invalid</string>
    <string name="error_incorrect_port">The ip or port is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Access network permissions are needed for providing ip address
        completions."
    </string>
    <string name="title_activity_controller">floodlight controller</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="floodlight">floodlight controller</string>

    <string name="hello_blank_fragment">floodlight Controller Status</string>

    <string name="jvm_memory_bloat">JVM Memory Bloat</string>

    <string name="dpid">DPID:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="hardware">Hardware:</string>
    <string name="software">Software:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="packet_count">Packet Count:</string>
    <string name="flow_count">Flow Count:</string>
    <string name="tables_count">Tables Count:</string>
    <string name="ports">Ports:</string>
    <string name="links">Links:</string>

    <string name="title_activity_about">about</string>
    <string name="about_version_label">"App version "</string>
    <string name="about_author">mufanlee 2016</string>
    <string name="about_app_icon_content_description">App icon</string>
    <string name="about_go_to_github">Go to GitHub</string>
</resources>
